Image Modal Index 1

--- a/application/composer.json
+++ b/application/composer.json
@@ -14,8 +14,7 @@
 		"php": ">=5.3.7",
 		"twbs/bootstrap": "^4.1",
 		"ivaynberg/select2": "^4.0",
-		"components/font-awesome": "^5.0",
-		"components/jquery": "^3.3"
+		"fortawesome/font-awesome": "^4.7"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
